--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -28,6 +28,7 @@
 		--z-index-header: 100;
 		--z-index-modal: 1000;
 		--z-index-menu: 200;
+		--z-index-menu-btn: 250;
 		--z-index-select: 150;
 
 		// container
