--- a/src/widgets/header/ui/menu/styles.module.scss
+++ b/src/widgets/header/ui/menu/styles.module.scss
@@ -1,12 +1,28 @@
 .container {
-	@apply top-0 left-0 fixed bg-background z-menu opacity-0 invisible md:hidden;
+	@apply top-0 left-0 fixed bg-background z-menu md:hidden;
 
 	width: var(--vw);
 	height: var(--vh);
 
-	transition: height 0.2s linear;
+	transform: translateX(calc(-1 * var(--vw)));
+
+	transition: transform 0.3s ease-in-out;
 
 	&.open {
 		@apply opacity-100 visible;
+
+		transform: translateX(0);
+	}
+
+	.content {
+		@apply flex flex-col gap-4 pt-[70px] pb-4 px-6;
+
+		.list {
+			@apply flex flex-col gap-4;
+
+			.item {
+				@apply w-max p-2 text-2xl;
+			}
+		}
 	}
 }
