--- a/src/widgets/header/ui/nav/styles.module.scss
+++ b/src/widgets/header/ui/nav/styles.module.scss
@@ -1,15 +1,15 @@
 .container {
+	@apply hidden lg:block;
+
 	.list {
 		@apply flex items-center gap-4 flex-nowrap;
 
 		.item {
 			.link {
-				@apply text-xl whitespace-nowrap;
+				@apply text-xl whitespace-nowrap py-2;
 
 				&.active {
-					@apply border-b-primary transition-all duration-300;
-
-					border-bottom-width: 2px;
+					@apply border-b-primary border-b-2 transition-all duration-300;
 				}
 
 				&:hover {
