--- a/src/widgets/server/console/ui/styles.module.scss
+++ b/src/widgets/server/console/ui/styles.module.scss
@@ -2,7 +2,13 @@
 	@apply flex flex-col bg-card rounded-layout;
 
 	.header {
-		@apply text-2xl px-6 pt-6 mb-3;
+		@apply text-3xl flex flex-row justify-between items-center flex-wrap gap-x-4 gap-y-2 px-6 py-4;
+
+		.headerActions {
+			a {
+				@apply text-2xl py-1 mb-1;
+			}
+		}
 	}
 
 	.hr {
@@ -12,16 +18,11 @@
 	.body {
 		@apply p-0;
 
-		&.mini {
-			@apply pb-2;
-		}
-
 		.lines {
-			@apply overflow-auto;
-			max-height: 300px;
+			@apply overflow-auto h-[450px] max-h-[450px];
 
-			&.mini {
-				@apply px-2;
+			.line {
+				@apply text-xl;
 			}
 
 			.consoleEmpty {
@@ -37,7 +38,7 @@
 			}
 
 			.line {
-				@apply w-full text-lg px-2;
+				@apply w-full text-xl px-2;
 
 				&.error {
 					@apply bg-destructive text-destructive-foreground;
@@ -89,23 +90,20 @@
 		}
 	}
 
-	&.fullConsole {
+	&.mini {
 		.header {
-			@apply text-3xl flex flex-row justify-between items-center flex-wrap gap-x-4 gap-y-2 mb-5;
+			@apply text-2xl px-6 pt-6 pb-3;
+		}
 
-			.headerActions {
-				a {
-					@apply text-2xl py-1 mb-1;
-				}
-			}
+		.body {
+			@apply pb-2;
 		}
 
 		.lines {
-			height: 450px;
-			max-height: 450px;
+			@apply max-h-[300px] px-2;
 
 			.line {
-				@apply text-xl;
+				@apply text-lg;
 			}
 		}
 	}
