add search-mods feature

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -26,10 +26,11 @@
 
 		// z-index
 		--z-index-header: 100;
-		--z-index-modal: 1000;
+		--z-index-select: 150;
 		--z-index-menu: 200;
 		--z-index-menu-btn: 250;
-		--z-index-select: 150;
+		--z-index-search-list: 300;
+		--z-index-modal: 1000;
 
 		// container
 		--container-max-width: 1760px;
