--- a/app/servers/[serverHash]/layout.module.scss
+++ b/app/servers/[serverHash]/layout.module.scss
@@ -5,7 +5,7 @@
 		@apply w-full bg-background;
 
 		.headerContainer {
-			@apply content-container p-6 pb-0 bg-card rounded-layout;
+			@apply content-container;
 		}
 
 		.contentContainer {
