--- a/src/entities/server/ui/servers-list/styles.module.scss
+++ b/src/entities/server/ui/servers-list/styles.module.scss
@@ -1,8 +1,8 @@
 .servers {
-	@apply grid grid-cols-2 gap-4;
+	@apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4;
 
 	.server {
-		@apply grid bg-backgroundLight p-4 rounded-lg border-2 border-transparent transition-colors;
+		@apply grid bg-card p-4 rounded-lg border-2 border-transparent transition-colors;
 
 		grid-template-areas:
 			'name name'
@@ -40,7 +40,7 @@
 			}
 
 			&.offline {
-				@apply text-error;
+				@apply text-destructive;
 			}
 		}
 	}
