--- a/src/entities/server/ui/servers-list/styles.module.scss
+++ b/src/entities/server/ui/servers-list/styles.module.scss
@@ -2,7 +2,7 @@
 	@apply grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4;
 
 	.server {
-		@apply grid bg-card p-4 rounded-lg border-2 border-transparent transition-colors;
+		@apply grid bg-card p-4 rounded-lg border-2 border-transparent hover:border-primary transition-colors;
 
 		grid-template-areas:
 			'name name'
@@ -11,11 +11,7 @@
 		grid-template-rows: 40px 30px;
 
 		&.isPublic {
-			@apply border-0;
-		}
-
-		&:hover {
-			@apply border-primary;
+			@apply hover:border-transparent;
 		}
 
 		.name {
