--- a/src/widgets/header/ui/styles.module.scss
+++ b/src/widgets/header/ui/styles.module.scss
@@ -1,7 +1,7 @@
 @import '@/app/styles/_mixins.scss';
 
 .header {
-	@apply sticky w-full bg-card top-0 left-0 right-0 z-header;
+	@apply fixed w-full bg-card top-0 left-0 right-0 z-header;
 
 	transition: transform 0.3s;
 
@@ -14,7 +14,7 @@
 	}
 
 	&:not(.landscape) {
-		&.fixed {
+		&.isFixed {
 			transform: translateY(-100%);
 
 			@include md(lg, 'max') {
