--- a/src/pages-flat/mods/styles.module.scss
+++ b/src/pages-flat/mods/styles.module.scss
@@ -23,7 +23,7 @@
 			}
 
 			.classesMenu {
-				@apply absolute bg-card top-14 mt-3 pb-10 left-0 right-0 z-2 opacity-0 pointer-events-none transition-all;
+				@apply absolute bg-card top-14 mt-3 pb-10 left-0 right-0 opacity-0 pointer-events-none transition-all z-menu;
 
 				transform: translateY(-5px);
 				box-shadow: 0 2px 10px rgb(0 0 0 / 50%);
