--- a/src/layouts/mod-layout/mod-layout-tabs.module.scss
+++ b/src/layouts/mod-layout/mod-layout-tabs.module.scss
@@ -11,7 +11,7 @@
 		}
 
 		&.active {
-			@apply bg-primary text-primary-foreground rounded-layout px-3 py-0;
+			@apply bg-primary text-primary-foreground rounded-button px-3 py-0;
 		}
 	}
 }
