--- a/src/pages-flat/mods/styles.module.scss
+++ b/src/pages-flat/mods/styles.module.scss
@@ -15,7 +15,7 @@
 			@apply flex;
 
 			.classesOpen {
-				@apply relative flex items-center gap-2 text-white h-14 py-4 px-5 border border-border text-xl;
+				@apply relative flex items-center gap-2 text-white h-14 py-4 px-5 border-2 border-border text-xl rounded-layout;
 
 				svg {
 					@apply transition-transform;
@@ -23,10 +23,11 @@
 			}
 
 			.classesMenu {
-				@apply absolute bg-card top-14 mt-3 pb-10 left-0 right-0 opacity-0 pointer-events-none transition-all z-menu;
+				@apply absolute bg-card top-16 mt-3 pb-10 left-0 right-0 opacity-0 pointer-events-none transition-all z-menu rounded-layout;
 
-				transform: translateY(-5px);
-				box-shadow: 0 2px 10px rgb(0 0 0 / 50%);
+				transform: translateY(-10px);
+
+				box-shadow: 0 0 14px 6px rgba(0, 0, 0, 0.7);
 
 				> ul {
 					@apply flex py-4 overflow-hidden max-h-[320px] transition-all;
@@ -79,7 +80,7 @@
 				}
 
 				.classesExpand {
-					@apply bg-gray-800 py-3 px-2 text-center w-full flex justify-center items-center absolute left-0 bottom-0 text-lg;
+					@apply bg-gray-800 py-3 px-2 text-center w-full flex justify-center items-center absolute left-0 bottom-0 text-lg rounded-b-layout;
 				}
 			}
 
@@ -115,7 +116,7 @@
 		}
 
 		.divider {
-			@apply bg-border h-full w-[1px];
+			@apply bg-border h-full w-[2px];
 
 			grid-area: divider;
 		}
