--- a/src/widgets/server/active-players/ui/styles.module.scss
+++ b/src/widgets/server/active-players/ui/styles.module.scss
@@ -1,5 +1,6 @@
 .card {
-	@apply flex flex-col gap-3 p-6 bg-card rounded-layout;
+	@apply flex flex-col gap-3 p-6 bg-card shadow-card rounded-layout;
+
 	.header {
 		@apply flex flex-row gap-4 justify-between;
 		.headerTitle {
