--- a/src/entities/player/ui/styles.module.scss
+++ b/src/entities/player/ui/styles.module.scss
@@ -5,7 +5,7 @@
 		@apply flex flex-col gap-3;
 
 		.row {
-			@apply flex flex-row flex-nowrap justify-between items-center gap-4 bg-card px-4 py-2 rounded-xl border-2 border-transparent transition-colors duration-300;
+			@apply flex flex-row flex-nowrap justify-between items-center gap-4 bg-card px-4 py-2 rounded-xl border-2 border-transparent transition-colors duration-300 shadow-card-sm;
 
 			.item {
 				@apply flex flex-row flex-nowrap items-center gap-6 text-2xl;
