--- a/src/pages-flat/server/backups/styles.module.scss
+++ b/src/pages-flat/server/backups/styles.module.scss
@@ -39,7 +39,7 @@
 		@apply flex flex-col gap-2;
 
 		.backup {
-			@apply flex flex-row items-center flex-wrap gap-3 bg-card py-2 px-4 rounded-lg;
+			@apply flex flex-row items-center flex-wrap gap-3 bg-card py-2 px-4 rounded-layout shadow-card-sm;
 
 			.backupName {
 				@apply text-xl text-foreground;
