--- a/src/widgets/server/server-header/ui/styles.module.scss
+++ b/src/widgets/server/server-header/ui/styles.module.scss
@@ -1,5 +1,5 @@
 .container {
-	@apply bg-card p-6 pb-0 rounded-layout;
+	@apply bg-card p-6 pb-0 rounded-layout shadow-card;
 
 	.bars {
 		@apply flex flex-col justify-start gap-5 border-b-2 border-border;
