--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -22,7 +22,8 @@
 		--input: 240 5.9% 90%;
 		--ring: 142.1 76.2% 36.3%;
 
-		--radius: 0.5rem;
+		// rounded-radius
+		--radius: 0.75rem;
 
 		// z-index
 		--z-index-header: 100;
