refactor file manager page, split to features, fix file content fetch bug

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -32,6 +32,7 @@
 		--z-index-menu-btn: 250;
 		--z-index-search-list: 300;
 		--z-index-modal: 1000;
+		--z-index-modal-overlay: 900;
 
 		// container
 		--container-max-width: 1760px;
