--- a/src/pages-flat/server-files/ui/styles.module.scss
+++ b/src/pages-flat/server-files/ui/styles.module.scss
@@ -25,7 +25,7 @@
 		}
 
 		.pathParts {
-			@apply flex flex-row items-center;
+			@apply flex flex-row items-center overflow-x-hidden;
 
 			.slash {
 				&::before {
