--- a/src/entities/server/ui/servers-list/styles.module.scss
+++ b/src/entities/server/ui/servers-list/styles.module.scss
@@ -27,16 +27,28 @@
 		}
 
 		.status {
-			@apply flex flex-row flex-nowrap gap-1 items-center text-xl text-primary;
+			@apply flex flex-row flex-nowrap gap-3 items-center text-xl;
 
 			grid-area: status;
 
 			&.online {
 				@apply text-primary;
+
+				&::before {
+					@apply inline-block w-3 h-3 bg-primary rounded-full;
+
+					content: '';
+				}
 			}
 
 			&.offline {
 				@apply text-destructive;
+
+				&::before {
+					@apply inline-block w-3 h-3 bg-destructive rounded-full;
+
+					content: '';
+				}
 			}
 		}
 	}
