--- a/src/widgets/breadcrumbs/ui/styles.module.scss
+++ b/src/widgets/breadcrumbs/ui/styles.module.scss
@@ -5,19 +5,19 @@
 		@apply flex items-center;
 
 		a {
-			@apply text-md xs:text-lg md:text-xl font-medium;
+			@apply text-md xs:text-lg font-medium;
 		}
 
 		&:not(:first-child) {
 			&::before {
-				@apply text-md xs:text-lg md:text-xl font-medium px-3;
+				@apply text-md xs:text-lg font-medium px-3;
 
 				content: '>';
 			}
 		}
 
 		span {
-			@apply px-2 text-md xs:text-lg md:text-xl font-medium text-muted-foreground;
+			@apply px-2 text-md xs:text-lg font-medium text-muted-foreground;
 		}
 	}
 }
