--- a/src/widgets/server-header/ui/styles.module.scss
+++ b/src/widgets/server-header/ui/styles.module.scss
@@ -34,14 +34,26 @@
 			}
 
 			.subBarStatus {
-				@apply flex flex-row flex-nowrap gap-1 items-center text-lg text-primary;
+				@apply flex flex-row flex-nowrap gap-2 items-center text-lg;
 
 				&.online {
 					@apply text-primary;
+
+					&::before {
+						@apply inline-block w-3 h-3 bg-primary rounded-full;
+
+						content: '';
+					}
 				}
 
 				&.offline {
 					@apply text-destructive;
+
+					&::before {
+						@apply inline-block w-3 h-3 bg-destructive rounded-full;
+
+						content: '';
+					}
 				}
 			}
 		}
