--- a/src/pages-flat/server-files/ui/styles.module.scss
+++ b/src/pages-flat/server-files/ui/styles.module.scss
@@ -42,7 +42,7 @@
 	}
 
 	.list {
-		@apply flex flex-col gap-2;
+		@apply w-full flex flex-col gap-2;
 
 		.listEmpty {
 			@apply flex flex-row items-center gap-2 py-2 px-4 justify-start text-xl text-white bg-destructive rounded-layout;
