add dynamic data change to overview widgets

--- a/src/widgets/server-active-players/ui/styles.module.scss
+++ b/src/widgets/server-active-players/ui/styles.module.scss
@@ -18,7 +18,9 @@
 
 	.body {
 		.rows {
-			@apply flex flex-col justify-start gap-4;
+			@apply flex flex-col justify-start gap-4 overflow-hidden;
+
+			transition: height 0.25s ease;
 
 			.row {
 				@apply flex flex-row flex-nowrap gap-3 items-center justify-start;
