--- a/src/widgets/server-header/ui/styles.module.scss
+++ b/src/widgets/server-header/ui/styles.module.scss
@@ -84,38 +84,6 @@
 	}
 }
 
-.modsCartBtn {
-	@apply text-xl rounded-2xl border-2 border-border bg-transparent py-1 px-3 whitespace-nowrap;
-}
-
 .cart {
-	@apply flex flex-row flex-nowrap justify-end items-center flex-1;
-}
-
-.cartMods {
-	@apply flex flex-col gap-2 p-4;
-
-	.cartMod {
-		@apply flex flex-row items-center gap-4 flex-nowrap rounded-lg transition-colors py-2 px-3 hover:bg-input;
-
-		.cartModImage {
-			@apply block;
-		}
-
-		.cartModTitle {
-			@apply text-xl text-white flex-1;
-		}
-	}
-
-	.cartActions {
-		@apply flex flex-col gap-3 mt-4;
-
-		.cartSubmitBtn {
-			@apply py-1 px-2 text-xl;
-		}
-
-		.cartResetBtn {
-			@apply py-1 px-2 text-xl;
-		}
-	}
+	@apply flex flex-row flex-nowrap justify-end items-center flex-1 min-h-[36px];
 }
