--- a/src/widgets/footer/ui/styles.module.scss
+++ b/src/widgets/footer/ui/styles.module.scss
@@ -1,5 +1,5 @@
 .footer {
-	@apply bg-card shadow-card grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-8 px-8 py-6;
+	@apply bg-background/50 shadow-card grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-8 px-10 py-6;
 
 	.column {
 		@apply flex flex-col items-start gap-2;
