choose-mode-step fixes, 3/5 steps complete

--- a/src/pages-flat/create-server/ui/steps/choose-mode-step/styles.module.scss
+++ b/src/pages-flat/create-server/ui/steps/choose-mode-step/styles.module.scss
@@ -1,3 +1,17 @@
 .container {
-	@apply block;
+	@apply w-full max-w-lg flex flex-col items-center gap-2;
+
+	.buttons {
+		@apply flex flex-col items-center justify-center gap-4;
+
+		button {
+			.title {
+				@apply text-xl font-bold;
+			}
+
+			.description {
+				@apply text-lg text-foreground/70;
+			}
+		}
+	}
 }
