--- a/src/widgets/header/ui/profile-button/ui/styles.module.scss
+++ b/src/widgets/header/ui/profile-button/ui/styles.module.scss
@@ -1,3 +1,7 @@
 .link {
 	@apply flex items-center gap-2 text-xl;
+
+	&.primary {
+		@apply border-2 border-transparent duration-300 hover:border-primary hover:bg-transparent;
+	}
 }
