--- a/src/app/styles/_globals.scss
+++ b/src/app/styles/_globals.scss
@@ -14,7 +14,7 @@
 	body {
 		@apply bg-background text-foreground text-md;
 
-		transition: all 0.2s ease-in;
+		/* transition: all 0.2s ease-in; */
 		position: relative;
 		z-index: 0;
 	}
