--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -70,5 +70,6 @@
 
 		--toastify-color-dark: hsl(120 8% 10%);
 		--toastify-color-progress-dark: hsl(142.1 70.6% 45.3%);
+		--toastify-toast-width: 400px;
 	}
 }
