--- a/src/widgets/server-console/ui/styles.module.scss
+++ b/src/widgets/server-console/ui/styles.module.scss
@@ -2,11 +2,11 @@
 	@apply flex flex-col bg-card shadow-card rounded-layout;
 
 	.header {
-		@apply text-3xl flex flex-row justify-between items-center flex-wrap gap-x-4 gap-y-2 px-6 py-4;
+		@apply text-2xl font-semibold flex flex-row justify-between items-center flex-wrap gap-x-4 gap-y-2 px-6 py-4;
 
 		.headerActions {
 			a {
-				@apply text-2xl py-1 mb-1;
+				@apply text-xl py-1 mb-1;
 			}
 		}
 	}
