--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -27,10 +27,12 @@
 
 		// z-index
 		--z-index-header: 100;
-		--z-index-select: 150;
+
 		--z-index-menu: 200;
 		--z-index-menu-btn: 250;
-		--z-index-search-list: 300;
+		--z-index-select: 300;
+		--z-index-select-item: 350;
+		--z-index-search-list: 400;
 		--z-index-modal: 1000;
 		--z-index-modal-overlay: 900;
 
