--- a/src/widgets/server-console/ui/styles.module.scss
+++ b/src/widgets/server-console/ui/styles.module.scss
@@ -94,10 +94,10 @@
 }
 
 .consoleEmpty {
-	@apply bg-card shadow-card rounded-layout w-full flex flex-col items-center justify-center gap-2 h-[250px];
+	@apply bg-card shadow-card rounded-layout w-full flex flex-col items-center justify-center gap-2 h-[250px] p-6;
 
 	span {
-		@apply text-2xl;
+		@apply text-2xl text-center;
 	}
 
 	&.consoleEmptyFull {
