--- a/src/widgets/server-online-players/ui/styles.module.scss
+++ b/src/widgets/server-online-players/ui/styles.module.scss
@@ -1,10 +1,17 @@
+@import '@/app/styles/_mixins.scss';
+
 .card {
 	@apply flex flex-col gap-3 p-6 bg-card shadow-card rounded-layout;
 
 	.header {
 		@apply flex flex-row gap-4 justify-between;
+
 		.headerTitle {
 			@apply text-2xl;
+
+			@include md(xs, 'max') {
+				@apply text-xl;
+			}
 		}
 
 		.headerActions {
