--- a/src/pages-flat/server-players/ui/styles.module.scss
+++ b/src/pages-flat/server-players/ui/styles.module.scss
@@ -1,13 +1,13 @@
-.container {
-	@apply grid gap-5;
+@import '@/app/styles/_mixins.scss';
 
-	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+.container {
+	@apply grid gap-5 grid-cols-1 md:grid-cols-2 2xl:grid-cols-4;
 
 	.group {
 		@apply flex flex-col gap-2 items-center justify-center bg-card p-layout rounded-layout shadow-card;
 
 		span {
-			@apply text-2xl;
+			@apply whitespace-pre-wrap text-xl text-center sm:text-2xl;
 		}
 	}
 }
